feat: add delete docs
