# docs/swagger.json
@@ -6,12 +6,14 @@
     "paths": {
         "/openings": {
             "post": {
-                "description": "Create a new Opening",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Openings"
                 ],
                 "summary": "Create Opening",
                 "parameters": [
@@ -30,6 +32,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/handler.CreateOpeningResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     }
                 }
@@ -65,6 +73,17 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/schemas.OpeningResponse"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
                 },
                 "message": {
                     "type": "string"
